# tripack

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  multicz.toml  pyproject.toml  zensical.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  dependabot-rewrite.yml
.multicz/: state.json
docs/: index.md  stability.md
docs/concepts/: dependency-injection.md  inversion-of-control.md  ioc-container.md
docs/container/: asgi.md  bindings.md  builder.md  config-json.md  config-toml.md  config-yaml.md  constructor-injection.md  fastapi.md  index.md  modules.md  provider-helpers.md  scopes.md  teardown.md
docs/contracts/: closeable.md  config-schema.md  errors.md  lifecycle.md  providers.md  resolver.md  tokens.md
docs/examples/: asgi.md  basic-container.md  fastapi.md  idempotent-registration.md  lifecycles.md  modules.md
docs/runtime/: bindings.md  cycles.md  dependency-graph.md  resolution-context.md  resolver.md  scopes.md
examples/: README.md
examples/click-basic/: README.md  pyproject.toml
examples/click-basic/src/click_basic/: __init__.py  __main__.py  cli.py  services.py  wiring.py
examples/click-basic/tests/: test_cli.py
examples/fastapi-basic/: README.md  pyproject.toml
examples/fastapi-basic/src/fastapi_basic/: __init__.py  __main__.py  api.py  container.json  contracts.py  services.py  wiring.py
examples/fastapi-basic/tests/: test_api.py
examples/typer-basic/: README.md  pyproject.toml
examples/typer-basic/src/typer_basic/: __init__.py  __main__.py  cli.py  services.py  wiring.py
examples/typer-basic/tests/: test_cli.py
scripts/: add_license_header.py  rewrite-dependabot-commit.sh
tests/integration/: _fixtures.py  test_async_scenarios_e2e.py  test_basic_wiring_e2e.py  test_config_loaders_e2e.py  test_cycle_detection_e2e.py  test_idempotent_registration_e2e.py  test_lifecycles_e2e.py
