# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Chris <goabonga@pm.me>

[project]
name = "tripack"
version = "0.0.0"
description = "Tripack is a compact Python project exploring dependency injection and IoC container patterns across three packages. It demonstrates clean object wiring, decoupled services, reusable components, and maintainable application structure."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Chris", email = "goabonga@pm.me" }]
keywords = ["dependency-injection", "ioc", "container", "framework"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
tripack-contracts = { workspace = true }
tripack-runtime = { workspace = true }
tripack-container = { workspace = true }

[dependency-groups]
dev = [
    "fastapi>=0.136.3",
    "httpx>=0.27",
    "mypy>=1.18",
    "pre-commit>=4.0",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pyyaml>=6.0",
    "ruff>=0.13",
    "tripack-contracts",
    "tripack-runtime",
    "tripack-container",
    "types-pyyaml>=6.0",
]
doc = [
    "zensical",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers", "--import-mode=importlib"]
# `packages/` holds the per-package unit tests; `tests/` holds the
# workspace-wide cross-package integration suite. The CI matrix
# runs each package in isolation via explicit path args, while the
# local `pytest --cov=packages` from the workspace root picks up
# both folders through these testpaths.
testpaths = ["packages", "tests"]
# Make the integration suite's shared fixtures importable by their
# bare module name (``import _fixtures``) without a per-directory
# ``conftest.py`` - that would clash with the existing container
# tests' conftest on mypy's duplicate-module check.
pythonpath = ["tests/integration"]

[tool.coverage.run]
# Restrict coverage measurement to the production source tree. Any
# ``pytest --cov`` invocation from the workspace root (whether it
# passes an explicit ``--cov=<module>`` flag or not) ends up tracking
# ``packages/`` only - the workspace-wide integration suite under
# ``tests/integration/`` exercises the same code paths and would
# otherwise show up in the report with partial coverage (not every
# fixture is exercised by every test), which would fail the
# ``fail_under = 100`` gate below for the wrong reason.
source = ["packages"]

[tool.coverage.report]
# Drives `pytest --cov` and the CI matrix gate: every package must hit
# 100% line coverage. `exclude_lines` is overridden (no default) to
# enumerate the ONLY three structurally unreachable patterns we
# accept; in particular the coverage.py default
# `pragma: no cover` is intentionally NOT in the list, so inline
# `# pragma: no cover` annotations are NOT honoured. Every commit is
# expected to cover its code; if a line is genuinely unreachable
# (e.g. Protocol method body) the team-internal pattern below picks
# it up automatically, otherwise write the test.
fail_under = 100
show_missing = true
skip_covered = true
exclude_lines = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 88
target-version = "py313"
src = ["packages/tripack-contracts/src", "packages/tripack-runtime/src", "packages/tripack-container/src"]
extend-exclude = [".venv", "dist", "build"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_decorators = true
no_implicit_reexport = true
extra_checks = true
# `explicit_package_bases` lets mypy disambiguate the three identical
# `tests/test_version.py` modules under each package's `tests/` dir.
explicit_package_bases = true
# The integration suite imports its shared fixtures via a bare
# module name (``import _fixtures``); the runtime resolution
# happens through a ``conftest.py`` that adds the directory to
# ``sys.path``. ``mypy_path`` is mypy's static analogue so the
# import resolves at type-check time too.
mypy_path = ["tests/integration"]
# Only non-source artefact directories are excluded - tests are
# type-checked alongside src for the same strictness.
exclude = ["build/", "dist/", "site/", ".venv/"]
