# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Chris <goabonga@pm.me>

[project]
name = "tripack-example-click"
version = "0.0.0"
description = "Tripack + Click integration example: container threaded through click.Context.obj."
requires-python = ">=3.13"
dependencies = [
    "tripack-container>=0.2.0",
    "click>=8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Editable install of the example's source tree so
# ``python -m click_basic`` finds the package after
# ``uv sync``. Not meant for distribution.
packages = ["src/click_basic"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers", "--import-mode=importlib"]
testpaths = ["tests"]
