# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Chris <goabonga@pm.me>

[project]
name = "tripack-example-fastapi"
version = "0.0.0"
description = "Tripack + FastAPI integration example: lifespan-bootstrapped container + Depends adapter."
requires-python = ">=3.13"
dependencies = [
    "tripack-container",
    "fastapi>=0.115",
    "uvicorn>=0.32",
]

[dependency-groups]
dev = [
    "httpx>=0.27",        # FastAPI's TestClient transport
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Editable install of the example's source tree so
# ``python -m fastapi_basic`` finds the package after
# ``uv sync``. Not meant for distribution - the example is a
# demo, not a library - but a proper editable install is the
# simplest way to get the src layout on ``sys.path`` for both
# pytest and the ``__main__`` entrypoint.
packages = ["src/fastapi_basic"]

[tool.uv.sources]
# Local path sources during the pre-publication period. Each
# entry would normally be removed once the matching package
# is on PyPI - the ``[project] dependencies`` declaration
# already references the same names. See ../README.md for
# the migration plan.
tripack-contracts = { path = "../../packages/tripack-contracts", editable = true }
tripack-runtime = { path = "../../packages/tripack-runtime", editable = true }
tripack-container = { path = "../../packages/tripack-container", editable = true }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers", "--import-mode=importlib"]
testpaths = ["tests"]
