# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Chris <goabonga@pm.me>

[project]
name = "tripack-example-typer"
version = "0.0.0"
description = "Tripack + Typer integration example: container-backed CLI with command-dispatched services."
requires-python = ">=3.13"
dependencies = [
    "tripack-container>=0.2.0",
    "typer>=0.15",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Editable install of the example's source tree so
# ``python -m typer_basic`` finds the package after
# ``uv sync``. Not meant for distribution.
packages = ["src/typer_basic"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-config", "--strict-markers", "--import-mode=importlib"]
testpaths = ["tests"]
